Updating hosts.yaml file; adds additional hosts and groups

--- a/hosts.yaml
+++ b/hosts.yaml
@@ -1,28 +1,42 @@
 all:
   hosts:
-    lisa:
-      ansible_ssh_host: 164.132.49.79
-      ansible_user: root
     alice:
-      ansible_ssh_host: 193.70.113.138
+      ansible_ssh_host: 193.70.113.138 # alice.lgdweb.ovh
       ansible_user: debian
     almanzo:
-      ansible_ssh_host: 193.70.113.102
+      ansible_ssh_host: 193.70.113.102 # almanzo.lgdweb.ovh
       ansible_user: debian
+    andrew:
+      ansible_ssh_host: 89.233.108.164 # andrew.lgdweb.ovh
+      ansible_user: root
     laura:
-      ansible_ssh_host: 37.187.180.215
+      ansible_ssh_host: 37.187.180.215 # laura.lgdweb.ovh
       ansible_user: debian
     mary:
-      ansible_ssh_host: 151.80.155.178
+      ansible_ssh_host: 151.80.155.178 # mary.lgdweb.ovh
+      ansible_user: debian
+    nelson:
+      ansible_ssh_host: 51.83.97.35 # nelson.lgdweb.ovh
       ansible_user: debian
   children:
     docker:
       hosts:
-        lisa:
         alice:
         almanzo:
+        andrew:
         laura:
         mary:
-    swarmmanager:
+        nelson:
+    f2b:
       hosts:
+        alice:
         almanzo:
+        andrew:
+        laura:
+        mary:
+        nelson:
+    standalone:
+      hosts:
+        andrew:
+        laura:
+        mary:
