--- a/host_vars/andrew/andrew.yaml
+++ b/host_vars/andrew/andrew.yaml
@@ -1,10 +1,10 @@
-# ansible_path/host_vars/lisa/lisa.yaml
+# ansible_path/host_vars/andrew/andrew.yaml
 
-rootUserPassword: "{{ vaultRootUserPassword | password_hash('sha512', vaultHashSalt) }}"
+rootUserPassword: "{{ vaultRootUserPassword | password_hash('sha512') }}"
 
 sshAdminUserName: '{{ vaultSshAdminUserName }}'
 sshAdminUserGroup: '{{ vaultSshAdminUserGroup }}'
-sshAdminUserPassword: "{{ vaultSshAdminUserPassword | password_hash('sha512', vaultHashSalt) }}"
+sshAdminUserPassword: "{{ vaultSshAdminUserPassword | password_hash('sha512') }}"
 sshAdminUserCreateHome: yes
 sshAdminUserShell: /bin/bash
 
