Updating ansible.cfg file; adds transfer_method and disable strict host key checking in ssh connection; fixes some warning in logs

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,4 +8,5 @@ callbacks_enabled = timer, profile_tasks, profile_roles
 forks = 20
 
 [ssh_connection]
-ssh_args = -C -o ControlMaster=auto -o ControlPersist=120s
+transfer_method = piped
+ssh_args = -C -o ControlMaster=auto -o ControlPersist=120s -o StrictHostKeyChecking=no
