Updating docker services role files; adds more steps for creating the data structure, this fixes some non-idempotent issues

--- a/roles/dockerServices/dataStructure/defaults/main.yaml
+++ b/roles/dockerServices/dataStructure/defaults/main.yaml
@@ -2,3 +2,4 @@
 
 dataStructureRepo: 'https://github.com/lgdweb/docker-data-server-infra.git'
 mainDataDirectory: '/srv'
+tempDataDirectory: '/tmp/srv'
