--- a/roles/dockerServices/dataStructure/tasks/main.yaml
+++ b/roles/dockerServices/dataStructure/tasks/main.yaml
@@ -9,10 +9,51 @@
     group: 1000
   tags: [dockerService, dataStructure]
 
+- name: DOCKER SERVICE DATA STRUCTURE | Create {{ tempDataDirectory }} directory
+  become: yes
+  file:
+    path: '{{ tempDataDirectory }}'
+    state: directory
+    owner: 1000
+    group: 1000
+  tags: [dockerService, dataStructure]
+
 - name: DOCKER SERVICE DATA STRUCTURE | Get data directory structure from Github
   git:
-    dest: '{{ mainDataDirectory }}'
+    dest: '{{ tempDataDirectory }}'
     force: yes
     repo: '{{ dataStructureRepo }}'
     update: yes
+  tags: [dockerServices, dataStructure, git]
+
+- name:
+    DOCKER SERVICE DATA STRUCTURE | Copy data directory structure for Fail2Ban service from {{
+    tempDataDirectory }}/fail2ban/data/
+  copy:
+    src: '{{ tempDataDirectory }}/fail2ban/data/'
+    dest: '{{ mainDataDirectory }}/fail2ban/data/'
+    remote_src: yes
+  tags: [dockerServices, dataStructure, git]
+
+- name:
+    DOCKER SERVICE DATA STRUCTURE | Copy data directory structure for nginx-proxy-manager service
+    from {{ tempDataDirectory }}/nginx-proxy-manager/data/
+  copy:
+    src: '{{ tempDataDirectory }}/nginx-proxy-manager/data/'
+    dest: '{{ mainDataDirectory }}/nginx-proxy-manager/data/'
+    remote_src: yes
+    force: false
+  tags: [dockerServices, dataStructure, git]
+
+- name:
+    DOCKER SERVICE DATA STRUCTURE | Copy logs data directory structure for utils services from {{
+    tempDataDirectory }}
+  copy:
+    src: '{{ tempDataDirectory }}/logs'
+    dest: '{{ mainDataDirectory }}/'
+    remote_src: yes
+    mode: preserve
+    force: false
+    owner: 1000
+    group: 1000
   tags: [dockerServices, dataStructure, git]
