Updating dockerServices rollback role; adds a task for removing temp data directory

--- a/rollbacks/dockerServices/dataStructure/tasks/main.yaml
+++ b/rollbacks/dockerServices/dataStructure/tasks/main.yaml
@@ -6,3 +6,10 @@
     path: '{{ mainDataDirectory }}'
     state: absent
   tags: [rollbacks, dockerService, dataStructure]
+
+- name: DOCKER SERVICE DATA STRUCTURE ROLLBACK | Remove {{ tempDataDirectory }} directory
+  become: yes
+  file:
+    path: '{{ tempDataDirectory }}'
+    state: absent
+  tags: [rollbacks, dockerService, dataStructure]
