fix: ansible-lint rule Truthy value should be one of \[false, true] in all files

--- a/host_vars/andrew/andrew.yaml
+++ b/host_vars/andrew/andrew.yaml
@@ -5,7 +5,7 @@ rootUserPassword: "{{ vaultRootUserPassword | password_hash('sha512') }}"
 sshAdminUserName: '{{ vaultSshAdminUserName }}'
 sshAdminUserGroup: '{{ vaultSshAdminUserGroup }}'
 sshAdminUserPassword: "{{ vaultSshAdminUserPassword | password_hash('sha512') }}"
-sshAdminUserCreateHome: yes
+sshAdminUserCreateHome: true
 sshAdminUserShell: /bin/bash
 
 eximAccountEmail: '{{ vaultEximAccountEmail }}'
