--- a/roles/apt/install/tasks/main.yaml
+++ b/roles/apt/install/tasks/main.yaml
@@ -1,8 +1,8 @@
 # ansible_path/roles/apt/install/tasks/main.yaml
 ---
-- name: APT INSTALL | Install packages
-  apt:
+    update_cache: true
     name: '{{ aptPackages }}'
-    update_cache: yes
+    update_cache: true
     state: latest
+    only_upgrade: true
   tags: [apt, apt-install]
