--- a/roles/system/logrotate/tasks/main.yaml
+++ b/roles/system/logrotate/tasks/main.yaml
@@ -7,7 +7,7 @@
     mode: 0644
     group: root
     owner: root
-    backup: yes
+    backup: true
   notify: restart logrotate
   with_items: '{{ logrotateConfigUri }}'
   tags: [system, logrotate, config]
