--- a/group_vars/f2b.yaml
+++ b/group_vars/f2b.yaml
@@ -5,7 +5,7 @@ dockerServiceFail2banContainerName: 'fail2ban-{{ inventory_hostname }}'
 dockerServiceFail2banImage: 'crazymax/fail2ban:1.0.1'
 dockerServiceFail2banDestNotifEmail: '{{ vaultDockerServiceFail2banDestNotifEmail }}'
 dockerServiceFail2banCapabilities: ['NET_ADMIN', 'NET_RAW']
-dockerServiceFail2banPrivileged: yes
+dockerServiceFail2banPrivileged: true
 dockerServiceFail2banNetworkMode: host
 dockerServiceFail2banVolumes:
   ['/srv/fail2ban/data:/data', '/srv/logs:/srv/logs:ro', '/var/log:/var/log:ro']
