--- a/roles/dockerServices/dataStructure/tasks/main.yaml
+++ b/roles/dockerServices/dataStructure/tasks/main.yaml
@@ -1,7 +1,7 @@
 # ansible_path/roles/dockerServices/dataStructure/tasks/main.yaml
 ---
 - name: DOCKER SERVICE DATA STRUCTURE | Create {{ mainDataDirectory }} directory
-  become: yes
+  become: true
   file:
     path: '{{ mainDataDirectory }}'
     state: directory
@@ -10,7 +10,7 @@
   tags: [dockerService, dataStructure]
 
 - name: DOCKER SERVICE DATA STRUCTURE | Create {{ tempDataDirectory }} directory
-  become: yes
+  become: true
   file:
     path: '{{ tempDataDirectory }}'
     state: directory
@@ -21,9 +21,9 @@
 - name: DOCKER SERVICE DATA STRUCTURE | Get data directory structure from Github
   git:
     dest: '{{ tempDataDirectory }}'
-    force: yes
+    force: true
     repo: '{{ dataStructureRepo }}'
-    update: yes
+    update: true
   tags: [dockerServices, dataStructure, git]
 
 - name:
@@ -32,7 +32,7 @@
   copy:
     src: '{{ tempDataDirectory }}/fail2ban/data/'
     dest: '{{ mainDataDirectory }}/fail2ban/data/'
-    remote_src: yes
+    remote_src: true
   tags: [dockerServices, dataStructure, git]
 
 - name:
@@ -41,7 +41,7 @@
   copy:
     src: '{{ tempDataDirectory }}/nginx-proxy-manager/data/'
     dest: '{{ mainDataDirectory }}/nginx-proxy-manager/data/'
-    remote_src: yes
+    remote_src: true
     force: false
   tags: [dockerServices, dataStructure, git]
 
@@ -51,9 +51,11 @@
   copy:
     src: '{{ tempDataDirectory }}/logs'
     dest: '{{ mainDataDirectory }}/'
-    remote_src: yes
+    remote_src: true
     mode: preserve
     force: false
     owner: 1000
     group: 1000
   tags: [dockerServices, dataStructure, git]
+    remote_src: true
+    force: false
