--- a/rollbacks/dockerServices/dataStructure/tasks/main.yaml
+++ b/rollbacks/dockerServices/dataStructure/tasks/main.yaml
@@ -1,14 +1,14 @@
 # ansible_path/rollbacks/dockerServices/dataStructure/tasks/main.yaml
 ---
 - name: DOCKER SERVICE DATA STRUCTURE ROLLBACK | Remove {{ mainDataDirectory }} directory
-  become: yes
+  become: true
   file:
     path: '{{ mainDataDirectory }}'
     state: absent
   tags: [rollbacks, dockerService, dataStructure]
 
 - name: DOCKER SERVICE DATA STRUCTURE ROLLBACK | Remove {{ tempDataDirectory }} directory
-  become: yes
+  become: true
   file:
     path: '{{ tempDataDirectory }}'
     state: absent
