--- a/roles/docker/network/tasks/main.yaml
+++ b/roles/docker/network/tasks/main.yaml
@@ -1,6 +1,6 @@
 # ansible_path/roles/docker/network/tasks/main.yaml
 ---
-- name: DOCKER NETWORK CREATE | Create {{ projectAppNetworkName }} network
+- name: DOCKER NETWORK CREATE | Create docker network {{ projectAppNetworkName }}
   community.docker.docker_network:
     name: '{{ projectAppNetworkName }}'
     attachable: true
