--- a/roles/system/hostname/tasks/main.yaml
+++ b/roles/system/hostname/tasks/main.yaml
@@ -1,17 +1,7 @@
 # ansible_path/roles/system/hostname/tasks/main.yaml
-
 ---
-
 - name: SYSTEM HOSTNAME | Set the hostname
-  hostname:
-    name: "{{ serverHostname }}"
+  ansible.builtin.hostname:
+    name: '{{ serverHostname }}'
   register: changeHostname
   tags: [system, hostname]
-
-- name: SYSTEM HOSTNAME | Cleanup /etc/hosts
-  template:
-    src: hosts.j2
-    dest: /etc/hosts
-  notify: restart rsyslog
-  when: changeHostname is changed
-  tags: [system, hosts]
