--- a/roles/system/openNtp/handlers/main.yaml
+++ b/roles/system/openNtp/handlers/main.yaml
@@ -1,8 +1,7 @@
 # ansible_path/roles/system/openNtp/handlers/main.yaml
 ---
-
-- name: restart openntpd
-  service:
+- name: Restart openntpd
+  ansible.builtin.service:
     name: openntpd
     state: restarted
     enabled: true
