--- a/roles/system/timezone/tasks/main.yaml
+++ b/roles/system/timezone/tasks/main.yaml
@@ -1,23 +1,21 @@
 # ansible_path/roles/system/timezone/tasks/main.yaml
-
 ---
-
 - name: SYSTEM TIMEZONE | Set default timezone
-  copy:
+  ansible.builtin.copy:
     content: "{{ serverTimezone }}\n"
     dest: /etc/timezone
     group: root
     owner: root
-    mode: 0644
+    mode: '0644'
   tags: [system, timezone, config]
 
 - name: SYSTEM TIMEZONE | Set /etc/localtime to {{ serverTimezone }}
-  file:
-    src: "/usr/share/zoneinfo/{{ serverTimezone }}"
+  ansible.builtin.file:
+    src: '/usr/share/zoneinfo/{{ serverTimezone }}'
     dest: /etc/localtime
     state: link
     owner: root
     group: root
-    mode: 0644
+    mode: '0644'
     force: true
   tags: [system, timezone, config]
