--- a/roles/users/user/defaults/main.yaml
+++ b/roles/users/user/defaults/main.yaml
@@ -3,6 +3,6 @@
 userName: debian
 userGroup: debian
 createHome: false
-userHome: "/home/debian"
-userSsh: no
+userHome: '/home/debian'
+userSsh: false
 userShell: /bin/false
