--- a/roles/users/addUserToGroups/tasks/main.yaml
+++ b/roles/users/addUserToGroups/tasks/main.yaml
@@ -1,15 +1,14 @@
 # ansible_path/roles/users/addUserToGroups/tasks/main.yaml
-
 ---
-
-- name: ADD USER TO GROUPS | Add the user {{ userName }} to the groups {{ userGroups }}
-  user:
-    name: "{{ userName }}"
-    groups: "{{ userGroups }}"
+- name: ADD USER TO GROUPS | Add user to groups
+  ansible.builtin.user:
+    name: '{{ userName }}'
+    groups: '{{ userGroups }}'
     state: present
     append: true
   tags: [users, add-user-to-groups]
 
-- name: ADD USER TO GROUPS | Reset ssh connection to allow user changes to affect current logged in user
-  meta: reset_connection
+- name:
+    ADD USER TO GROUPS | Reset ssh connection to allow user changes to affect current logged in user
+  ansible.builtin.meta: reset_connection
   tags: [users, add-user-to-groups, resetSshConnection]
